[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]

[tool.isort]
known_third_party = ["libtorrent"]
profile = "google"
single_line_exclusions = []

[tool.pytest.ini_options]
addopts = "-rw"
asyncio_mode = "auto"
filterwarnings = "error"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_format = "%(asctime)s %(levelname)s %(message)s"
usefixtures = "caches"

[tool.setuptools_scm]
