[metadata]
name = tvaf
description = An HTTP bridge for bittorrent
long_description = file: README
long_description_content_type = text/plain
url = https://github.com/AllSeeingEyeTolledEweSew/tvaf
author = AllSeeingEyeTolledEweSew
author_email = asetes@pm.me
license = 0BSD
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: BSD License
    License :: Public Domain
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Communications :: File Sharing
    Topic :: Database
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Networking

[options]
packages = find:
install_requires =
    apsw>=3.35.0
    asyncstdlib
    cachetools>=2.0.0,<6
    dbver>=0.5.1
    fastapi>=0.78.0,<0.79
    libtorrent>=2.0.4,<2.1
    pydantic>=1.8,<2
    typing-extensions>=4.2.0
python_requires = >=3.9
include_package_data = true

[options.packages.find]
where = src

[options.entry_points]
tvaf.services.atp.default =
    50_config = tvaf.services.atp:_default_from_config
tvaf.services.shutdown =
    60_request = tvaf.services:_shutdown_drain_requests
    70_session = tvaf.services:_shutdown_pause_session
    80_resume = tvaf.services:_shutdown_save_resume_data
    90_alerts = tvaf.services:_shutdown_alert_driver
    98_clear = tvaf.services:_shutdown_clear_caches
tvaf.services.stage_config =
    00_lock = tvaf.services:_stage_config_lock
    50_default_atp = tvaf.services.atp:_stage_config_default
    50_session = tvaf.services:_stage_config_session_service
    50_public = tvaf.public:_stage_config
    80_disk = tvaf.services:_stage_config_disk
    90_global = tvaf.services:_stage_config_global
tvaf.services.startup =
    10_default_atp = tvaf.services.atp:_startup_config_default
    20_alert = tvaf.services:_startup_alert_driver
    20_request = tvaf.services:_startup_request_service
    20_resume = tvaf.services:_startup_resume_service
    30_load = tvaf.services:_load_resume_data
tvaf.swarm.access_swarm =
    public = tvaf.public:_access

[options.package_data]
tvaf = py.typed

[flake8]
max-line-length = 88
extend-ignore = E203

[pydocstyle]
convention = google

[mypy]
mypy_path = typeshed
warn_return_any = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_unreachable = True
warn_unused_configs = True

[mypy-tvaf.spaceman]
ignore_errors = True

[tox:tox]
isolated_build = True
envlist = py

[testenv]
deps =
    pytest
    pytest-asyncio
    -rtests/test-requirements.txt
commands =
    pytest {posargs}
